resources/https-istio-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    gateway.networking.k8s.io/gateway-name: https
  name: https-istio-node-port
  namespace: istio-system
spec:
  ports:
  - appProtocol: tcp
    name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  - appProtocol: https
    name: https
    nodePort: 30000
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    gateway.networking.k8s.io/gateway-name: https
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
